<resources>
    <string name="app_name">MeetKai-Test</string>

    <!-- Server Strings -->
    <string name="client_id">6e743a22-4943-48c1-bb51-4258761ef67a</string>
    <string name="base_url">https://www.penguindan-test.gq</string>

    <!-- Authentication Strings -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="empty_login_entry">Login inputs cannot be empty</string>
    <string name="confirm_password_not_match">Passwords do not match</string>
    <string name="weak_password">Password is too weak</string>
    <string name="application_secret">Admin Secret</string>

    <!-- Main Activity Strings -->
    <string name="settings">Settings</string>
    <string name="translate">Translate</string>
    <string name="monitor">Monitor</string>

    <!-- Translate Fragment Strings -->
    <string name="input_title_text">Input Text</string>
    <string name="correct_button">Correct</string>
    <string name="incorrect_button">Incorrect</string>
    <string name="add_source_button">Add Source</string>
    <string name="get_phrase_button">Get New Phrase</string>
    <string-array name="supported_languages">
        <item>Afrikaans</item>
        <item>Arabic</item>
        <item>Bosnian</item>
        <item>Bulgarian</item>
        <item>Catalan</item>
        <item>Croatian</item>
        <item>Czech</item>
        <item>Danish</item>
        <item>Dutch</item>
        <item>Estonian</item>
        <item>Finnish</item>
        <item>French</item>
        <item>German</item>
        <item>Greek</item>
        <item>Haitian Creole</item>
        <item>Hindi</item>
        <item>Hungarian</item>
        <item>Icelandian</item>
        <item>Indonesian</item>
        <item>Italian</item>
        <item>Japanese</item>
        <item>Korean</item>
        <item>Latvian</item>
        <item>Lithuanian</item>
        <item>Malagasy</item>
        <item>Malay</item>
        <item>Maltese</item>
        <item>Norwegian</item>
        <item>Persian</item>
        <item>Polish</item>
        <item>Portuguese</item>
        <item>Romanian</item>
        <item>Slovak</item>
        <item>Slovenian</item>
        <item>Spanish</item>
        <item>Swedish</item>
        <item>Telugu</item>
        <item>Thai</item>
        <item>Turkish</item>
        <item>Ukrainian</item>
        <item>Urdu</item>
        <item>Vietnamese</item>
        <item>Welsh</item>
    </string-array>

    <!-- Strings for Settings Fragment -->
    <string name="log_out_button">Log Out Button</string>

</resources>
