<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="15dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:paddingBottom="10dp"
    android:orientation="vertical"
    tools:context=".Fragments.CreateAccountFragment"
    android:theme="@style/AppTheme">


    <TextView
        android:id="@+id/username_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:layout_marginTop="10dp"
        android:text="@string/username"/>

    <EditText
        android:id="@+id/user_name_edit_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:paddingStart="10dp"
        android:saveEnabled="false"
        android:inputType="textNoSuggestions|textVisiblePassword"
        android:background="@drawable/rounded_background"/>

    <TextView
        android:id="@+id/user_name_error_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/holo_red_light"/>

    <TextView
        android:id="@+id/password_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:paddingStart="10dp"
        android:inputType="textPassword|textNoSuggestions"
        android:saveEnabled="false"
        android:background="@drawable/rounded_background"/>

    <TextView
        android:id="@+id/weak_password_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@android:color/holo_red_light"
        android:visibility="invisible"
        android:textSize="10sp"
        android:layout_marginStart="10dp"
        android:text="@string/weak_password"/>

    <TextView
        android:id="@+id/confirm_password_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:text="@string/confirm_password"/>

    <EditText
        android:id="@+id/confirm_password_edit_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:paddingStart="10dp"
        android:inputType="textPassword|textNoSuggestions"
        android:saveEnabled="false"
        android:background="@drawable/rounded_background"/>

    <TextView
        android:id="@+id/confirm_password_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:textColor="@android:color/holo_red_light"
        android:textSize="10sp"
        android:visibility="invisible"
        android:layout_marginLeft="10dp"
        android:text="@string/confirm_password_not_match"/>

    <TextView
        android:id="@+id/admin_secret_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="17sp"
        android:text="@string/application_secret"/>

    <EditText
        android:id="@+id/admin_secret_edit_text"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:paddingStart="10dp"
        android:inputType="textPassword|textNoSuggestions"
        android:saveEnabled="false"
        android:background="@drawable/rounded_background"/>
</LinearLayout>